feat: basic user profiles with customisation
